Add runnable examples and Bun testing notes

--- a/docs/v0.1-spec.md
+++ b/docs/v0.1-spec.md
@@ -71,5 +71,12 @@
 ## 13. JS/WASM の拡張余地
 - v0.1 では C 出力を固める。将来は C→WASM (Emscripten) や直接 JS エミッタを追加する構想。
 
+## 14. 直近のフロントエンド強化ポイント
+- 字句解析をトークナイザに切り出し、行区切り依存を解消する。
+- Expr/Stmt を分離し、`let` 代入・式文・二項演算・`await` 付き呼び出しを自然に扱う。
+- `if`/`else` 分岐とローカル変数を C 生成で出力し、実用的な分岐が書けるようにする。
+- 解析エラーにファイル/行/列の Span を付与して診断を改善する。
+- 配列・オブジェクトリテラルと標準ライブラリ (env/process/math/json/http) を拡張するのは上記が固まってから着手する。
+
 以上の範囲に開発を集中させることで、
 "TS よりスッキリ、Go よりリッチ、V みたいに軽く、Bun みたいに楽" な体験を目指す。
